# StatusPage

./: AGENTS.md  README.md  package.json  pnpm-lock.yaml
.codex/: codex-os.manifest.json  verify.commands
.codex/scripts/: run_verify_commands.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  git-hygiene.yml  lockfile-rationale.yml  perf-enforced.yml  perf-foundation.yml  prod-compose-smoke.yml  quality-gates.yml  release.yml
apps/monitor/: Cargo.toml
apps/monitor/src/checker/: dns.rs
apps/web/: package.json
apps/web/__tests__/components/: internal-support-console.test.tsx
apps/web/__tests__/lib/: onboarding.test.ts  types.test.ts
apps/web/app/(dashboard)/dashboard/[slug]/: page.tsx
apps/web/app/(dashboard)/dashboard/[slug]/incidents/: page.tsx
apps/web/app/(dashboard)/dashboard/[slug]/monitors/: page.tsx
apps/web/app/(dashboard)/dashboard/[slug]/services/: page.tsx
apps/web/app/(dashboard)/dashboard/internal-support/: page.tsx
apps/web/app/(dashboard)/dashboard/onboarding/: page.tsx
apps/web/app/(marketing)/invite/[token]/: page.tsx
apps/web/app/api/proxy/[...path]/: route.ts
apps/web/components/admin/: internal-support-console.tsx
apps/web/components/dashboard/: sidebar.tsx
apps/web/components/invitations/: accept-invitation-card.tsx
apps/web/e2e/: managed.spec.ts
apps/web/lib/: api-client.ts  onboarding.ts  types.ts
docs/: PORTFOLIO-DISPOSITION.md
migrations/: 0017_managed_beta_identity_and_domains.sql  0018_operator_audit_logs.sql
scripts/git/: guard-branch.sh
(+3 files in other folders)
