[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../packages/shared" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "json"] }
reqwest = { version = "0.13", features = ["json"] }
hickory-resolver = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tokio-util = "0.7"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[features]
default = ["ping"]
ping = ["surge-ping"]

[dependencies.surge-ping]
version = "0.8"
optional = true
